[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
parking_lot = "0.12"
thiserror = "1.0"
nix = "0.26"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
glob = "0.3"

[lib]
name = "rust_db"
crate-type = ["cdylib", "rlib"]